--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
-body{
+body {
     color: white;
     background: black;
-    margin: opx;
+    margin: 0px;
+    font-family: "Chakra Petch", sans-serif;
 }
 
 header {
@@ -11,7 +12,7 @@ header {
     color: rgb(42, 122, 228);
 }
 
-section {
+.chamada {
     background: rgb(184, 156, 213);
     padding-bottom: 80px;
     padding-top: 80px;
@@ -21,4 +22,27 @@ section {
 
 .chamada-texto {
     margin-right: 5%;
+}
+
+h1 {
+    font-size: 40px;
+}
+
+p {
+    font-size: 20px;
+}
+
+img {
+    height: 200px;
+}
+
+.categoria-videos {
+    display: flex;
+    overflow-x: auto;
+    gap: 10px;
+}
+
+.categoria {
+    padding-left: 20px;
+    padding-right: 20px;
 }
