--- a/styles.css
+++ b/styles.css
@@ -32,9 +32,7 @@ p {
     font-size: 20px;
 }
 
-img {
-    height: 200px;
-}
+    
 
 .categoria-videos {
     display: flex;
@@ -49,4 +47,5 @@ img {
 
 .categoria-videos img {  
     opacity:   0.5;
+    height: 200;
 }
