--- a/styles.css
+++ b/styles.css
@@ -32,8 +32,6 @@ p {
     font-size: 20px;
 }
 
-    
-
 .categoria-videos {
     display: flex;
     overflow-x: auto;
@@ -48,4 +46,8 @@ p {
 .categoria-videos img {  
     opacity:   0.5;
     height: 200;
+}
+
+.categoria-video img:hover {
+    opacity:  1.0;
 }
