--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
     background: black;
     margin: 0px;
     font-family: "Chakra Petch", sans-serif;
+    margin-bottom: 100px;
 }
 
 header {
@@ -39,8 +40,9 @@ p {
 }
 
 .categoria {
-    padding-left: 20px;
+    padding-left:  20px;
     padding-right: 20px;
+    margin-top: 50px;
 }
 
 .categoria-videos img {  
